--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-# Ignore image files
-*.png
-*.jpg
-*.jpeg
-*.gif
-*.bmp
-*.tiff
-*.svg
-*.ico
-
 # Ignore video files
 *.mp4
 *.avi
@@ -44,6 +34,11 @@ venv/
 env/
 ENV/
 .venv/
+.env
+
+# Jupyter Notebook
+.ipynb_checkpoints/
+*.ipynb
 
 # IDE files
 .vscode/
@@ -62,3 +57,47 @@ Thumbs.db
 # Temporary files
 *.tmp
 *.temp
+
+# Data files (uncomment if you want to ignore large data files)
+# *.zarr/
+# *.nc
+# *.h5
+# *.hdf5
+
+# Model checkpoints and outputs
+checkpoints/
+models/
+outputs/
+results/
+
+# Visualization outputs (if you want to ignore generated plots)
+# visualization_outputs/
+# Ignore image files
+# *.png
+# *.jpg
+# *.jpeg
+# *.gif
+# *.bmp
+# *.tiff
+# *.svg
+# *.ico
+
+# Configuration backups
+*.bak
+config_*.yaml
+
+# Documentation builds
+docs/_build/
+site/
+
+# Coverage reports
+.coverage
+htmlcov/
+
+# pytest
+.pytest_cache/
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
